удалил лишний проект

--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -403,6 +403,8 @@
 
 <script>
 
+    
+
     (function setDisabled() {
         @{
 
@@ -597,6 +599,7 @@
             });
             
         }
+        update();
 
         getWebSocketMessages(function (message) {
 
@@ -606,5 +609,8 @@
             
         });
     }());
+
+
+  
 
 </script>
