Ввод токена при создании бота

--- a/Website/Views/BotCreation/BotTypeSelection.cshtml
+++ b/Website/Views/BotCreation/BotTypeSelection.cshtml
@@ -10,8 +10,8 @@
             <img class="card-img-top" src="@Url.Content("~/images/shoppingCart.png")" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Бот для продаж</h5>
-                <a class="btn btn-success btn-lg btn-block" asp-controller="BotEditing" asp-action="CreateNewBotForSales">Создать</a>
-                <a class="btn btn-outline-success btn-lg btn-block" asp-controller="BotEditing" asp-action="CreateNewFeedback">Смотреть примеры</a>
+                <a class="btn btn-success btn-lg btn-block" asp-controller="BotCreation" asp-action="BotForSalesTokenEntry">Создать</a>
+                <a class="btn btn-outline-success btn-lg btn-block" asp-controller="" asp-action="">Смотреть примеры</a>
                 <hr />
                 <p class="card-text"> С помощью такого можно создать небольшой каталог с товарами. Пользователь может добавить товары в корзину, а после ввести свои данные и отправить заказ. Заказ тут же станет виден во вкладке "Заказы" (неожиданно)</p>
 
