--- a/Website/Views/Home/MyBots.cshtml
+++ b/Website/Views/Home/MyBots.cshtml
@@ -31,4 +31,4 @@
     </tbody>
     
 </table>
-<a  class="btn btn-secondary btn-lg btn-block"  asp-area="" asp-controller="Home"  asp-action="BotCreation"  >Создать бота</a>
+<a  class="btn btn-secondary btn-lg btn-block"  asp-area="" asp-controller="BotCreation"  asp-action="Index"  >Создать бота</a>
