с таблица возникли проблемы

--- a/Website/Views/BotCreation/BotForSalesTokenEntry.cshtml
+++ b/Website/Views/BotCreation/BotForSalesTokenEntry.cshtml
@@ -47,7 +47,7 @@
             </div>
         </div>*@
 
-            <div class="imgCenter max-width: 100%;">
+            <div class="imgCenter ">
                 <img src="@Url.Content("~/images/creation of a new bot.png")">
             </div>
 
