--- a/Website/Views/ModeratorManagement/Index.cshtml
+++ b/Website/Views/ModeratorManagement/Index.cshtml
@@ -32,7 +32,7 @@
 
     <div style="height:30px;"></div>
 
-    <div id="listOfModerators" class=" align-items-center">
+    <div id="listOfModerators" class=" align-items-center text-break">
 
     </div>
 
@@ -146,7 +146,7 @@
         var button = $(this);
 
 
-        var accountId = button.closest('.container').attr('account_id');
+        var accountId = button.closest('#moderator_template').attr('account_id');
         console.log(`accountId  = ${accountId }`);
 
         var url_string = window.location.href;
