--- a/Website/Views/Orders/Orders2.cshtml
+++ b/Website/Views/Orders/Orders2.cshtml
@@ -457,6 +457,8 @@
             type: 'post',
             data: { page: @ViewData["currentPage"] },
             success: function (data) {
+                //OK
+                console.log(data);
                 var orders = data.orders;
                 for (var c_i = 0; c_i < data.containers.length; c_i++) {
                     var container = data.containers[c_i];
@@ -485,11 +487,13 @@
 
                 for (var i = 0; i < orders.length; i++) {
                     var order = orders[i];
+
                     if (bots[order.botId] == undefined ||
                         statusGroups[order.statusGroupId] == undefined
                         || statuses[order.statusId] == undefined) {
                         needRefreshVars = true;
                     }
+
                     nodesCreatorArr.push(constructCreation(order));
                 }
 
@@ -515,9 +519,20 @@
                                 statusGroups[orders[i].statusGroupId] == undefined ||
                                 statuses[orders[i].statusId] == undefined) {
                                 needRefreshVars = true;
-                                //console.log(bots);
-                                //console.log(statusGroups);
-                                //console.log(statuses);
+
+                                console.log("  orders[i].botId    ");
+                                console.log(orders[i].botId);
+                                console.log(" orders[i].statusGroupId     ");
+                                console.log(orders[i].statusGroupId);
+                                console.log("   orders[i].statusId   ");
+                                console.log(orders[i].statusId);
+
+                                console.log("bots");
+                                console.log(bots);
+                                console.log("statusGroups");
+                                console.log(statusGroups);
+                                console.log("statuses");
+                                console.log(statuses);
                             }
                         }
                         if (needRefreshVars) {
