--- a/Website/Views/ModeratorManagement/Index.cshtml
+++ b/Website/Views/ModeratorManagement/Index.cshtml
@@ -12,7 +12,15 @@
 
     <partial name="HintModerators" />
 
-    
+
+
+    <div class=" container" >
+        <div class="alert alert-danger" role="alert" id="ErrorMessage" style="display:none;" >
+            Сообщение об ошибке
+        </div>
+    </div>
+
+
 
     <div class="container ">
         <div class="row m-1 p-1 auto-margin">
@@ -54,6 +62,23 @@
 
 
 <script>
+
+    function showError(messageStr) {
+
+        var errorMes = $('#ErrorMessage');
+        var errorWindowShown = errorMes.css('display') != 'none';
+
+        var template = "Ошибка сервера.\n";
+        errorMes.html(template + messageStr);
+
+
+        if (!errorWindowShown) {
+            errorMes.show();
+            setTimeout(() => errorMes.hide(), 5000);
+        }
+            
+    }
+
     function requestAListOfModerators() {
 
         console.log("запрос списка");
@@ -75,10 +100,12 @@
                 if (answer.success == true) {
                     redrawlistOfModerators(answer.moderators);
                 } else {
+                    showError(answer.failMessage)
                     console.log("Ошибка сервера");
                 }
             },
             error: function (xhr) {
+                showError("Ошибка запроса списка модераторов")
                 console.log("Ошибка");
             }
 
@@ -129,9 +156,14 @@
 
                 if (answer.success == true) {
                     requestAListOfModerators();
+                } else {
+                    showError(answer.failMessage)
+
                 }
             },
             error: function () {
+                showError("Ошибка приглашения нового модератора")
+
                 console.log('error');
             }
         });
@@ -168,9 +200,14 @@
 
                 if (answer.success == true) {
                     requestAListOfModerators();
+                } else {
+                    showError(answer.failMessage)
+
                 }
             },
             error: function () {
+                showError("Ошибка удаления модератора")
+
                 console.log('error');
             }
         });
