--- a/Website/Views/Home/MyBots.cshtml
+++ b/Website/Views/Home/MyBots.cshtml
@@ -15,14 +15,17 @@
         @{
             foreach (var bot in ViewData["bots"] as List<BotOnHomePage>)
             {
-                <tr>
-                    <th scope="row">@bot.Number</th>
-                    <td>@bot.Name</td>
-                    <td>@bot.Status</td>
-                    <td>
-                        <a asp-controller="BotForSalesSettings" asp-action="Settings" asp-route-botId="@bot.BotId" class="btn btn-info">Настройки</a>
-                    </td>
-                </tr>
+        <tr>
+            <th scope="row">@bot.Number</th>
+
+            
+
+            <td><a href="https://telegram.me/@bot.Name">@@@bot.Name</a> </td>
+            <td>@bot.Status</td>
+            <td>
+                <a asp-controller="BotForSalesSettings" asp-action="Settings" asp-route-botId="@bot.BotId" class="btn btn-info">Настройки</a>
+            </td>
+        </tr>
             }
         }
 
