--- a/Website/Views/Account/SuccessfulSend.cshtml
+++ b/Website/Views/Account/SuccessfulSend.cshtml
@@ -91,8 +91,8 @@
                 </div>
                 <div class="col-10">
                     <h4 class="alert-heading" style="color:#ffffff; font-weight: 400;font-size:2.5rem;">Готово!</h4>
-                    <p style="color:#ffffff; font-size:1.75rem;">На вашу почту отправлено письмо. Для того, чтобы сбросить пароль следуйте инструкциям в письме. </p>
-                    @*<p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>*@
+                    <p style="color:#ffffff; font-size:1.75rem;">@ViewData["message"]</p>
+                    
                 </div>
             </div>
         </div>
