--- a/Website/wwwroot/css/TreeEditor.css
+++ b/Website/wwwroot/css/TreeEditor.css
@@ -1,4 +1,16 @@
-﻿.template{
+﻿#nodes-menu {
+    height: 100%;
+    width: 15rem;
+}
+
+#main {
+    width: 100%;
+    height: 100%;
+    padding: 15px 150px 150px 15px;
+    overflow: scroll;
+}
+
+.template{
     margin: 15px auto;
 }
 
@@ -7,6 +19,7 @@
     width: 200px;
     border: 2px solid black;
     border-radius: 10px 10px;
+    clear: both;
 }
 
 .nodeHolder {
@@ -15,34 +28,60 @@
     border: 2px dashed navy;
     background-color: lavender;
     border-radius: 10px 10px;
-    float: right;
+    float: left;
 }
 
-.appenderDiv{
+.appenderDiv {
     width: 400px;
     height: 25px;
 }
 
-.arrows{
+.arrows {
     width: 200px;
     display: flex;
     flex-direction: column;
-    flex-wrap:nowrap;
+    flex-wrap: nowrap;
     float: left;
 }
 
 .verticalAdderArrow {
+    display: flex;
     height: 10.5px;
     width: 0;
     border: 2px solid black;
     margin-left: 100px;
 }
 
+.verticalNodeArrow {
+    display: flex;
+    height: 85.5px;
+    width: 0;
+    border: 2px solid black;
+    margin-left: 100px;
+}
+
 .horizontalAdderArrow {
+    display: flex;
     height: 0;
     width: 100px;
     border: 2px solid black;
     margin-left: 100px;
+}
+
+.verticalFillArrow {
+    display: flex;
+    flex: 1;
+    width: 0;
+    border: 2px solid black;
+    margin-left: 100px;
+}
+
+.wrapperContainer {
+    display: flex;
+}
+
+.childContainer {
+    float: left;
 }
 
 .nodeName {
